--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Homework 3" />
+    <meta name="description" content="Homework 5" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,7 +26,7 @@
     <!-- Шапка -->
     <header class="header border">
       <div class="header container">
-        <a class="header logo link" href="https://paulhighrow.github.io/goit-markup-hw-04/"
+        <a class="header logo link" href="https://paulhighrow.github.io/goit-markup-hw-05/"
           ><span class="logo-web">Web</span>Studio</a
         >
         <nav>
@@ -66,17 +66,34 @@
           <h1 class="visually-hidden">Портфолио студии</h1>
           <!-- Фильтр -->
           <ul class="filter list">
-            <li><button class="btn current" type="button">Все</button></li>
-            <li><button class="btn" type="button">Веб-сайты</button></li>
-            <li><button class="btn" type="button">Приложения</button></li>
-            <li><button class="btn" type="button">Дизайн</button></li>
-            <li><button class="btn" type="button">Маркетинг</button></li>
+            <li><button class="btn active" type="button">Все</button></li>
+            <li>
+              <button class="btn" type="button">Веб-сайты</button>
+            </li>
+            <li>
+              <button class="btn" type="button">Приложения</button>
+            </li>
+            <li>
+              <button class="btn" type="button">Дизайн</button>
+            </li>
+            <li>
+              <button class="btn" type="button">Маркетинг</button>
+            </li>
           </ul>
           <!-- Проекты -->
           <ul class="project list">
             <li class="project-card item">
               <a class="card-link" href="">
-                <img src="./images/img-port1.jpg" alt="Веб-сайт Технокряк" width="370" />
+                <div class="card-img-box">
+                  <img src="./images/img-port1.jpg" alt="Веб-сайт Технокряк" width="370" />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения
+                      о&nbsp;компании или частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-description">
                   <h2 class="card-title">Технокряк</h2>
                   <p class="card-category">Веб-сайт</p>
@@ -85,7 +102,16 @@
             </li>
             <li class="project-card item">
               <a class="card-link" href="">
-                <img src="./images/img-port2.jpg" alt="Два баскетболиста" width="370" />
+                <div class="card-img-box">
+                  <img src="./images/img-port2.jpg" alt="Два баскетболиста" width="370" />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения
+                      о&nbsp;компании или частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-description">
                   <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
                   <p class="card-category">Дизайн</p>
@@ -94,7 +120,16 @@
             </li>
             <li class="project-card item">
               <a class="card-link" href="">
-                <img src="./images/img-port3.jpg" alt="Логотип ресторана Seafood" width="370" />
+                <div class="card-img-box">
+                  <img src="./images/img-port3.jpg" alt="Логотип ресторана Seafood" width="370" />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения
+                      о&nbsp;компании или частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-description">
                   <h2 class="card-title">Ресторан Seafood</h2>
                   <p class="card-category">Приложение</p>
@@ -103,7 +138,16 @@
             </li>
             <li class="project-card item">
               <a class="card-link" href="">
-                <img src="./images/img-port4.jpg" alt="Наушники" width="370" />
+                <div class="card-img-box">
+                  <img src="./images/img-port4.jpg" alt="Наушники" width="370" />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения
+                      о&nbsp;компании или частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-description">
                   <h2 class="card-title">Проект Prime</h2>
                   <p class="card-category">Маркетинг</p>
@@ -112,7 +156,16 @@
             </li>
             <li class="project-card item">
               <a class="card-link" href="">
-                <img src="./images/img-port5.jpg" alt="Логотип приложения Boxes" width="370" />
+                <div class="card-img-box">
+                  <img src="./images/img-port5.jpg" alt="Логотип приложения Boxes" width="370" />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения
+                      о&nbsp;компании или частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-description">
                   <h2 class="card-title">Проект Boxes</h2>
                   <p class="card-category">Приложение</p>
@@ -121,11 +174,20 @@
             </li>
             <li class="project-card item">
               <a class="card-link" href="">
-                <img
-                  src="./images/img-port6.jpg"
-                  alt="Веб-сайт Inspiration has no Borders"
-                  width="370"
-                />
+                <div class="card-img-box">
+                  <img
+                    src="./images/img-port6.jpg"
+                    alt="Веб-сайт Inspiration has no Borders"
+                    width="370"
+                  />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения
+                      о&nbsp;компании или частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-description">
                   <h2 class="card-title">Inspiration has no Borders</h2>
                   <p class="card-category">Веб-сайт</p>
@@ -134,11 +196,20 @@
             </li>
             <li class="project-card item">
               <a class="card-link" href="">
-                <img
-                  src="./images/img-port7.jpg"
-                  alt="Дизайн издания Limited Edition"
-                  width="370"
-                />
+                <div class="card-img-box">
+                  <img
+                    src="./images/img-port7.jpg"
+                    alt="Дизайн издания Limited Edition"
+                    width="370"
+                  />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения
+                      о&nbsp;компании или частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-description">
                   <h2 class="card-title">Издание Limited Edition</h2>
                   <p class="card-category">Дизайн</p>
@@ -147,7 +218,16 @@
             </li>
             <li class="project-card item">
               <a class="card-link" href="">
-                <img src="./images/img-port8.jpg" alt="Логотип проекта LAB" width="370" />
+                <div class="card-img-box">
+                  <img src="./images/img-port8.jpg" alt="Логотип проекта LAB" width="370" />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения
+                      о&nbsp;компании или частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-description">
                   <h2 class="card-title">Проект LAB</h2>
                   <p class="card-category">Маркетинг</p>
@@ -156,7 +236,16 @@
             </li>
             <li class="project-card item">
               <a class="card-link" href="">
-                <img src="./images/img-port9.jpg" alt="Приложение Growing Business" width="370" />
+                <div class="card-img-box">
+                  <img src="./images/img-port9.jpg" alt="Приложение Growing Business" width="370" />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения
+                      о&nbsp;компании или частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-description">
                   <h2 class="card-title">Growing Business</h2>
                   <p class="card-category">Приложение</p>
@@ -171,7 +260,7 @@
     <footer class="footer">
       <div class="container">
         <div class="address-container">
-          <a class="footer logo link" href="https://paulhighrow.github.io/goit-markup-hw-04/"
+          <a class="footer logo link" href="https://paulhighrow.github.io/goit-markup-hw-05/"
             ><span class="logo-web">Web</span>Studio</a
           >
           <address class="contacts-footer">
@@ -256,5 +345,7 @@
         </div>
       </div>
     </footer>
+    <!-- Скрипт текущей кнопки -->
+    <script src="./js/activebtn.js"></script>
   </body>
 </html>
