--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>WebStudio</title>
   </head>
 
-  <body>
+  <body data-page>
     <!-- Шапка -->
     <header class="header border">
       <div class="header container">
